--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -93,7 +93,7 @@ Precipitation data were obtained from two different sources.  The first was an e
 
 ## Hypotheses
 
-Our statistical analyses were structured around specific hypotheses (Table `r ref("tab:hypotheses")`) concerning which remote-sensing covariates in which months should correlate with landings in specific quarters.  These hypotheses were based on biological information concerning how environmental conditions affect sardine survival and recruitment and affect exposure of Indian oil sardines to the coastal fishery. The quarter 3 (Jul-Sep) catch overlaps the summer monsoon and the main spawning months.  This is also the quarter where small 0-year fish from early spawning (June) often appear in the catch, sometimes in large numbers.  Variables that affect or are correlated with movement of sardines inshore should be correlated with quarter 3 landings.  In addition,  pre-spawning (January-May) environmental conditions should be correlated with the spawning strength as adult oil sardines experience an acceleration of growth during this period along with egg development.  The post-monsoon catch (Oct-May) is a mix of 0-year fish (less than 12 months old) and mature fish (greater than 12 months old).  Variables that are correlated with larval and juvenile survival should correlate with the post-monsoon catch both in the current year and in future years, one to two years after.  
+Our statistical analyses were structured around specific hypotheses (Table `r ref("tab:hypotheses")`) concerning which remote-sensing covariates in which months should correlate with landings in specific quarters.  These hypotheses were based on biological information concerning how environmental conditions affect sardine survival and recruitment and affect exposure of Indian oil sardines to the coastal fishery. The quarter 3 (Jul-Sep) catch overlaps the summer monsoon and the main spawning months.  This is also the quarter where small 0-year fish from early spawning (June) often appear in the catch, sometimes in large numbers.  Variables that affect or are correlated with movement of sardines inshore should be correlated with quarter 3 landings.  In addition,  pre-spawning (January-May) environmental conditions should be correlated with the spawning strength as adult oil sardines experience an acceleration of growth during this period along with egg development.  The post-monsoon catch (Oct-May) is a mix of 0-year fish (less than 12 months old) and mature fish (greater than 12 months old).  Variables that are correlated with spawning strength and larval and juvenile survival should correlate with the post-monsoon catch both in the current year and in future years, one to two years after.  
 
 Our hypotheses (Table `r ref("tab:hypotheses")`) focus mainly on two drivers: upwelling and ocean temperature.  We also test hypotheses concerning precipitation as this has historically been an environmental covariate considered to influence the timing of oil sardine landings.  Salinity has been proposed as responsible for spawning initiation; however we do not have long-term salinity data. In the Appendix, we show tests of chlorophyll-a but as with salinity the CHL time series is short (1997-2015) and the tests have low power.
 
